dnl Process this file with autoconf to produce a configure script

AC_INIT()
AC_CONFIG_HEADER(Vk/VkConfig.h)

AC_PROG_CXX
AC_PROG_CC
AM_PROG_CXX
AM_PROG_CC
AC_PROG_RANLIB
AM_PROG_RANLIB
AC_PROGRAM_CHECK(AR, ar, ar, :)

AC_PROG_INSTALL

AC_FIND_X

AC_STDC_HEADERS

AC_WITH(motif-includes, [ motif_includes=-I$withval ])
AC_SUBST(x_includes)
AC_SUBST(motif_includes)
AC_OUTPUT(Makefile)
